--- a/package.json
+++ b/package.json
@@ -16,12 +16,12 @@
     "prismjs": "^1.26.0",
     "react": "^17.0.2",
     "react-code-blocks": "^0.0.9-0",
-    "react-dom": "^18.1.0",
+    "react-dom": "^17.0.2",
     "react-router-dom": "^6.2.1",
     "react-scripts": "^5.0.0",
+    "react-simple-code-editor": "^0.11.0",
     "react-toastify": "^8.1.0",
-    "web-vitals": "^2.1.4",
-    "react-simple-code-editor": "^0.11.0"
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
